--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,12 @@
     "tabs",
     "webNavigation"
   ],
+  "content_scripts": [
+    {
+      "matches": ["https://www.youtube.com/*"],
+      "js": ["sendContents.js"]
+    }
+  ],
   "host_permissions": [
     "https://www.youtube.com/*"
   ]
