--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "keywords": [],
   "author": "jx3yang",
   "dependencies": {
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
