--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "keywords": [],
   "author": "jx3yang",
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
